--- a/VinayakaGitWorkSpace/Project/VLimatEduzApp/src/app/modules/mastersConfig/Shared/component/data-grid-component/data-grid-component.scss
+++ b/VinayakaGitWorkSpace/Project/VLimatEduzApp/src/app/modules/mastersConfig/Shared/component/data-grid-component/data-grid-component.scss
@@ -72,6 +72,13 @@
   border-radius: 50%;
   padding: 4px;
   transition: color 0.3s, background 0.3s;
+   cursor: pointer;
+}
+
+.action-buttons button.btn-action:hover i {
+  color: #fff;
+  background: var(--primary-blue);
+  box-shadow: 0 2px 8px rgba(0,0,0,0.10);
 }
 
 .empty-state { text-align: center; padding: 36px 12px; }
