side bar changed

--- a/VinayakaGitWorkSpace/Project/VLimatEduzApp/src/app/shared/components/layout/sidebar-component.html
+++ b/VinayakaGitWorkSpace/Project/VLimatEduzApp/src/app/shared/components/layout/sidebar-component.html
@@ -34,6 +34,7 @@
                       <i [class]="child.icon"></i>
                     </div>
                     <span>{{ child.label }}</span>
+                      <i class="fas fa-arrow-right hover-symbol"></i>
                   </a>
                 }
               </div>
