--- a/VinayakaGitWorkSpace/Project/VLimatEduzApp/src/app/shared/components/layout/header-component.html
+++ b/VinayakaGitWorkSpace/Project/VLimatEduzApp/src/app/shared/components/layout/header-component.html
@@ -5,7 +5,7 @@
           <div class="brand-title">EduZ Platform</div>
         </div>
         <div class="menu-label-center" style="position: absolute; left: 50%; top: 10px; transform: translate(-50%, 0); text-align: center; font-size: 1.2em; font-weight: bold; width: 300px; z-index: 10;">
-        {{ selectedLabel }}
+          {{  this.menuLabelService.label$().key }}
         </div>
 
         <div class="top-actions">
