--- a/VinayakaGitWorkSpace/Project/VLimatEduzApp/src/app/shared/components/loader/loader.component.html
+++ b/VinayakaGitWorkSpace/Project/VLimatEduzApp/src/app/shared/components/loader/loader.component.html
@@ -1,3 +1,3 @@
 <div *ngIf="loaderService.isLoading | async" class="loader-overlay">
-  <img src="public/assets/loader.png" alt="Loading..." class="loader-img" />
+  <img src="assets/loader.gif" alt="Loading..." class="loader-img" />
 </div>
