--- a/VinayakaGitWorkSpace/Project/VLimatEduzApp/src/app/features/student/admission-component/admission-component.html
+++ b/VinayakaGitWorkSpace/Project/VLimatEduzApp/src/app/features/student/admission-component/admission-component.html
@@ -3,9 +3,9 @@
     <section class="panel">
       <div class="panel-body">
         <form [formGroup]="form" (ngSubmit)="addGridItem()" style="margin-bottom:16px; display:flex; gap:8px; flex-wrap:wrap; align-items:center;">
-          <input type="text" formControlName="configValue" placeholder="Name" style="flex:1; min-width:120px; padding:6px 10px; border-radius:4px; border:1px solid #ccc;" required />
-          <input type="text" formControlName="configKey" placeholder="Code" style="flex:1; min-width:120px; padding:6px 10px; border-radius:4px; border:1px solid #ccc;" required />
-          <input type="text" formControlName="description" placeholder="Description" style="flex:2; min-width:180px; padding:6px 10px; border-radius:4px; border:1px solid #ccc;" required />
+          <input type="text" formControlName="configValue" placeholder="Student Name" style="flex:1; min-width:120px; padding:6px 10px; border-radius:4px; border:1px solid #ccc;" required />
+          <input type="text" formControlName="configKey" placeholder="Admn No" style="flex:1; min-width:120px; padding:6px 10px; border-radius:4px; border:1px solid #ccc;" required />
+          <input type="text" formControlName="description" placeholder="Class" style="flex:2; min-width:180px; padding:6px 10px; border-radius:4px; border:1px solid #ccc;" required />
           <button type="submit"  style="padding:6px 16px; background:var(--primary-blue); color:#fff; border:none; border-radius:4px; font-weight:500; cursor:pointer;">{{ editIndex !== null ? 'Update' : 'Add' }}</button>
             <button type="button" (click)="resetForm()" style="padding:6px 16px; background:#f44336; color:#fff; border:none; border-radius:4px; font-weight:500; cursor:pointer;">Reset</button>
         </form>
@@ -13,13 +13,13 @@
           <div style="display:flex; gap:8px; margin-bottom:12px; flex-wrap:wrap; align-items:center;">
             <input type="text" [(ngModel)]="searchTerm" (input)="onSearchChange()" placeholder="Search all fields..." style="flex:1; min-width:200px; padding:6px 10px; border-radius:4px; border:1px solid #90caf9;" />
           </div>
-          <app-data-grid
+          <app-admission-grid
             [data]="filteredGridData()"
             [title]="gridTitle"
             [hideHeader]="true"
             (modify)="onModify($event)"
             (delete)="onDelete($event)">
-          </app-data-grid>
+          </app-admission-grid>
       </div>
     </section>
   </div>
