add admission details

--- a/VinayakaGitWorkSpace/Project/VLimatEduzApp/src/app/features/student/admission-component/admission-grid-component.html
+++ b/VinayakaGitWorkSpace/Project/VLimatEduzApp/src/app/features/student/admission-component/admission-grid-component.html
@@ -24,14 +24,14 @@
               ↕
             </i>
           </th>
-          <th class="col-code" (click)="sortData('AdmnNo')">
-            AdmnNo
-             <i class="sort-icon" [class.asc]="sortColumn === 'AdmnNo' && sortDirection === 'asc'" 
-               [class.desc]="sortColumn === 'AdmnNo' && sortDirection === 'desc'">
+          <th class="col-code" (click)="sortData('AdmNo')">
+            AdmNo
+             <i class="sort-icon" [class.asc]="sortColumn === 'AdmNo' && sortDirection === 'asc'" 
+               [class.desc]="sortColumn === 'AdmNo' && sortDirection === 'desc'">
               ↕
             </i>
           </th>
-          <th (click)="sortData('AdmnDate')">AdmnDate</th>
+          <th (click)="sortData('AdmDate')">AdmDate</th>
           <th (click)="sortData('DOB')">DOB</th>
           <th class="col-name" (click)="sortData('Student')">
             Student
@@ -43,9 +43,9 @@
           <th (click)="sortData('Class')">Class</th>
           <th (click)="sortData('Sec')">Sec</th>
           <th (click)="sortData('Father')">Father</th>
-          <th (click)="sortData('Mother')">Mother</th>
-          <th (click)="sortData('FMobileNo')">FMobileNo</th>
-          <th (click)="sortData('MMobileNo')">MMobileNo</th>
+           <th (click)="sortData('F_MobileNo')">F_MobileNo</th>
+          <th (click)="sortData('Mother')">Mother</th>         
+          <th (click)="sortData('M_MobileNo')">M_MobileNo</th>
           <th class="col-actions">Actions</th>
         </tr>
       </thead>
@@ -55,8 +55,8 @@
             [class.odd]="i % 2 === 1"
             [class.selected]="selectedItem?.id === row.id">
           <td class="col-no">{{ (currentPage - 1) * pageSize + i + 1 }}</td>
-          <td class="col-code"><span class="code-badge">{{ row.AdmnNo }}</span></td>
-          <td>{{ row.AdmnDate }}</td>
+          <td class="col-code"><span class="code-badge">{{ row.AdmNo }}</span></td>
+          <td>{{ row.AdmDate }}</td>
           <td>{{ row.DOB }}</td>
           <td class="col-name">
             <div class="name-cell">
@@ -67,9 +67,9 @@
           <td>{{ row.Class }}</td>
           <td>{{ row.Sec }}</td>
           <td>{{ row.Father }}</td>
+          <td>{{ row.F_MobileNo }}</td>
           <td>{{ row.Mother }}</td>
-          <td>{{ row.FMobileNo }}</td>
-          <td>{{ row.MMobileNo }}</td>
+          <td>{{ row.M_MobileNo }}</td>
           <td class="col-actions">
             <div class="action-buttons">
               <button class="btn-action btn-modify" 
